# greenrock

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  load_data.sh  main.py  publish.sh  pyproject.toml  run_local.sh  strategy_exploration_0.ipynb
analysis/: btc_data_processor.ipynb
crates/greenrock-engine/: Cargo.toml
crates/greenrock-engine/src/: lib.rs  main.rs
greenrock-web-ui/: README.md  index.html
greenrock-web-ui/src/: App.tsx  main.tsx
greenrock-web-ui/src/components/: Chart.tsx  Chat.tsx  ErrorBoundary.tsx  TradingControls.tsx
greenrock-web-ui/src/types/: core.ts
greenrock-web-ui/src/utils/: core.ts
processed_btc_data/: 2017-08.parquet
src/: lib.rs  main.rs
src/agents/: market_analysis.rs  mod.rs  openai.rs
src/brokers/: binance.rs  core.rs
src/models/: mod.rs  timeseries.rs
src/processor/: loaders.rs  mod.rs
src/processor/prompts/: main_system.rs
src/processor/tasks/: binance_operations_task.rs  binance_reporting_task.rs  entry_interaction_task.rs  mod.rs  portfolio_aggregation_task.rs  portfolio_reporting_task.rs  portfolio_selection_task.rs  regimen_aggregation_task.rs  regimen_evaluation_task.rs  regimen_reporting_task.rs  regimen_selection_task.rs  regimen_switching_task.rs  reply_generation.rs  reply_generation_task.rs
src/rig_tools/: market_analysis.rs  mod.rs
src/runner/: core.rs  runner.rs
src/strategy/: core.rs
templates/: main_system_prompt.md
web-ui/: index.html  package.json
web-ui/src/: App.tsx  main.tsx
web-ui/src/components/: Chart.tsx  Chat.tsx  TradingControls.tsx
(+18 files in other folders)
