[package]
name = "greenrock"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
graph-flow = "0.2.3"
rig-core = "0.16.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
chrono = "0.4.41"
